--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "gluino"
 version = "0.1.0"
 edition = "2021"
-
+license-file = "LICENSE"
+readme = "README.md"
+repository = "https://github.com/jklamer/Gluino"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
