--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/jklamer/Gluino"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+description = "A library for working with/serializing data using the Gluino spec."
 [dependencies]
 serde = {version = "1.0.143", features = ["derive"] }
