--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ description = "A library for working with/serializing data using the Gluino spec
 serde = {version = "1.0.143", features = ["derive"] }
 strum = {version = "0.24.1", features = ["derive"] }
 strum_macros = {version = "0.24.1"}
+sha2="0.10.6"
