most unit ser complete

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ strum = {version = "0.24.1", features = ["derive"] }
 strum_macros = {version = "0.24.1"}
 base64 = "0.13.1"
 sha2="0.10.6"
+gc={version="0.4.1", features = ["derive"]}
