Hex fingerprint print

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ description = "A library for working with/serializing data using the Gluino spec
 serde = {version = "1.0.143", features = ["derive"] }
 strum = {version = "0.24.1", features = ["derive"] }
 strum_macros = {version = "0.24.1"}
-base64 = "0.13.1"
-sha2="0.10.6"
-gc={version="0.4.1", features = ["derive"]}
+hex = "0.4.3"
+sha2 = "0.10.6"
+gc = {version="0.4.1", features = ["derive"]}
